--- a/html/Cpdt.Reflection.html
+++ b/html/Cpdt.Reflection.html
@@ -1535,7 +1535,7 @@ Ltacのパターンマッチングを使用してGallina項についての等値
 &nbsp;&nbsp;<span class="id" title="keyword">let</span> <span class="id" title="var">b</span> := <span class="id" title="var">inList</span> <span class="id" title="var">x</span> <span class="id" title="var">xs</span> <span class="id" title="keyword">in</span><br/>
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="var">b</span> <span class="id" title="keyword">with</span><br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="constructor">true</span> ⇒ <span class="id" title="var">xs</span><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="constructor">false</span> ⇒ <span class="id" title="keyword">constr</span>:<span class="id" title="notation">(</span><span class="id" title="var">x</span><span class="id" title="notation">,</span> <span class="id" title="var">xs</span><span class="id" title="notation">)</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="constructor">false</span> ⇒ <span class="id" title="keyword">constr</span>:(<span class="id" title="notation">(</span><span class="id" title="var">x</span><span class="id" title="notation">,</span> <span class="id" title="var">xs</span><span class="id" title="notation">)</span>)<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="id" title="keyword">end</span>.<br/>
 
 <br/>
@@ -1631,8 +1631,8 @@ Ltacのパターンマッチングを使用してGallina項についての等値
 <br/>
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">reifyTerm</span> <span class="id" title="var">xs</span> <span class="id" title="var">e</span> :=<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="var">e</span> <span class="id" title="keyword">with</span><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="inductive">True</span> ⇒ <span class="id" title="keyword">constr</span>:<a class="idref" href="Cpdt.Reflection.html#Truth'"><span class="id" title="constructor">Truth'</span></a><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="inductive">False</span> ⇒ <span class="id" title="keyword">constr</span>:<a class="idref" href="Cpdt.Reflection.html#Falsehood'"><span class="id" title="constructor">Falsehood'</span></a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="inductive">True</span> ⇒ <span class="id" title="var">Truth'</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;| <span class="id" title="inductive">False</span> ⇒ <span class="id" title="var">Falsehood'</span><br/>
 &nbsp;&nbsp;&nbsp;&nbsp;| ?<span class="id" title="var">e1</span> <span class="id" title="notation">∧</span> ?<span class="id" title="var">e2</span> ⇒<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="id" title="keyword">let</span> <span class="id" title="var">p1</span> := <span class="id" title="var">reifyTerm</span> <span class="id" title="var">xs</span> <span class="id" title="var">e1</span> <span class="id" title="keyword">in</span><br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="id" title="keyword">let</span> <span class="id" title="var">p2</span> := <span class="id" title="var">reifyTerm</span> <span class="id" title="var">xs</span> <span class="id" title="var">e2</span> <span class="id" title="keyword">in</span><br/>
